[gd_scene load_steps=3 format=3 uid="uid://blaxlkjh4ae3p"]

[ext_resource type="PackedScene" uid="uid://r8c351u0qoor" path="res://fighter.tscn" id="1_cx7nh"]
[ext_resource type="Script" path="res://fight.gd" id="1_g0sp3"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_g0sp3")

[node name="Fighter1" parent="." instance=ExtResource("1_cx7nh")]
position = Vector2(192, 512)

[node name="Fighter2" parent="." instance=ExtResource("1_cx7nh")]
position = Vector2(960, 512)
player = 2
direction = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="P1Inputs" type="Label" parent="CanvasLayer"]
offset_right = 256.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 26
text = "inputs"
horizontal_alignment = 1

[node name="P2Inputs" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 256.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "inputs"
horizontal_alignment = 1
